# lhn

./: .gitignore  CLAUDE.md  HISTORY.md  LICENSE  README.md  __init__.py  environment_spark.yaml  process_directory.py  pyproject.toml  requirements.txt  setup.py  time_summary.ipynb
cohort/: __init__.py  demographics.py  identification.py
core/: __init__.py  shared_methods.py
docs/: ANALYSIS_SCHEMA.md  CONFIG_TEMPLATES.md  PATTERNS.md  discern-ontology-reconstruction.md
implementation/: 280-Disease-Classification_20260114_144919.txt  README.md  comorbidity_procedure_Codes_SCD_RWD.csv  initialize-resouces.md  lhn_config_diagrams.mermaid  lhn_config_reference.md  lhn_config_tutorial.md  lhn_package_decomposition.md  lhn_project_initialization_guide.md
implementation/the_config-files/: 000-config-template.yaml  config-RWD.yaml
lhn/: __init__.py  analytics.py  bootstrap.py  cohort.py  cohort_matching.py  data_conversion.py  data_display.py  data_summary.py  data_transformation.py  database_operations.py  db.py  excel_operations.py  extract.py  features.py  file_operations.py  function_parameters.py  header.py  helpers.py  introspection_utils.py  item.py  listTable.py  list_operations.py  make.py  make_pipeline.py  metaTable_module.py  metadata_functions.py  notebook_interaction.py  pandas_utils.py  plot.py  process_directory.py  query.py  resource.py  shared_methods.py  spark_query.py  spark_utils.py  statisticalSummary.py  test_utils.py
lhn/cohort/: __init__.py  case_control.py  demographics.py  identification.py
lhn/core/: __init__.py  db.py  extract.py  resource.py  shared_methods.py
lhn/implementation/: README.md  extract_module_guide.md  lhn_project_initialization_guide.md  lhn_reference.md
lhn/implementation/the_config-files/: 000-control-template.yaml  config-global.yaml  example-codes.csv
lhn/ontology/: __init__.py  discern.py
reviews/asksage-loop/: SUMMARY.md
reviews/asksage-loop/round-1/: PATTERNS-google-claude-47-opus.md  PATTERNS-google-gemini-2.5-pro.md  PATTERNS-gpt-5.md  PATTERNS-grok-4-20-reasoning.md
reviews/asksage-loop/round-2/: PATTERNS-google-claude-47-opus.md  PATTERNS-google-gemini-2.5-pro.md  PATTERNS-gpt-5.md  PATTERNS-grok-4-20-reasoning.md
reviews/asksage-loop/round-3/: PATTERNS-google-claude-47-opus.md  PATTERNS-google-gemini-2.5-pro.md  PATTERNS-gpt-5.md
tests/: test_make_pipeline.py
(+8 files in other folders)
